--- a/tests/suites/emcpssf_l0_test.gradle
+++ b/tests/suites/emcpssf_l0_test.gradle
@@ -129,6 +129,7 @@ include "oracle/sysman/emaas/platform/savedsearch/comparator/test/utils/AppMappi
 include "oracle/sysman/emaas/platform/savedsearch/comparator/test/utils/JsonUtilTest.class"
 include "oracle/sysman/emaas/platform/savedsearch/comparator/test/utils/LogUtilTest.class"
 include "oracle/sysman/emaas/platform/savedsearch/comparator/test/utils/RegistryLookupUtilTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/comparator/test/utils/StringUtilTest.class"
 include "oracle/sysman/emaas/platform/savedsearch/comparator/test/utils/TenantSubscriptionUtilTest.class"
 
         useRestAssured=true
