--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include 'savedsearch-core', 'savedsearch-comparator','savedsearch-comparator:savedsearchcomparator-web','savedsearch-comparator:savedsearchcomparator-webutils','savedsearch-comparator:savedsearchcomparator-ee','savedsearch-entities','savedsearch-web','savedsearch-web-utils','savedsearch-ear','savedsearch-schema','savedsearch-zdt-test-sdk' 
+include 'savedsearch-core','savedsearch-entities','savedsearch-web','savedsearch-web-utils','savedsearch-ear','savedsearch-schema','savedsearch-zdt-test-sdk' 
 
