--- a/savedsearch-web/WebContent/WEB-INF/web.xml
+++ b/savedsearch-web/WebContent/WEB-INF/web.xml
@@ -13,8 +13,31 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
   <filter>
-  	<filter-name>CORS.filter</filter-name>
+    <filter-name>OWSMSecurityFilter</filter-name>
+    <filter-class>oracle.wsm.agent.handler.servlet.SecurityFilter</filter-class>
+    <init-param>
+         <param-name>servlet-name</param-name>
+         <param-value>jersey</param-value> <!-- this assumes that you have a servlet by name jersey in your web.xml -->
+     </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>OWSMSecurityFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <filter>
+    <filter-name>SecAuthorizationFilter</filter-name>
+    <filter-class>oracle.sysman.emSDK.emaas.authz.listener.AuthorizationFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>SecAuthorizationFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <filter>
+    <filter-name>CORS.filter</filter-name>
     <filter-class>oracle.sysman.emSDK.emaas.platform.savedsearch.ws.rest.SavedSearchCORSFilter</filter-class>
   </filter>
   <filter-mapping>
@@ -22,23 +45,14 @@
     <url-pattern>/v1/*</url-pattern>
     <dispatcher>FORWARD</dispatcher>
     <dispatcher>REQUEST</dispatcher>
-  </filter-mapping> 
+  </filter-mapping>
   
-<security-constraint>
-  <web-resource-collection>
-    <web-resource-name>secure-pages</web-resource-name>
-    <url-pattern>/v1/*</url-pattern>
-    <http-method-omission>OPTIONS</http-method-omission>
-  </web-resource-collection>
-  <auth-constraint>
-    <role-name>valid-users</role-name>
-  </auth-constraint>
-</security-constraint>
-<security-role>
-  <role-name>valid-users</role-name>
-</security-role>
-<login-config>
-    <auth-method>CLIENT-CERT,BASIC</auth-method>
-</login-config>
-   
+  <servlet>
+      <servlet-name>jersey</servlet-name>
+      <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+  </servlet>
+  <servlet-mapping>
+      <servlet-name>jersey</servlet-name>
+      <url-pattern>/*</url-pattern>
+  </servlet-mapping>
 </web-app>
