--- a/savedsearch-comparator/savedsearchcomparator-ee/build.gradle
+++ b/savedsearch-comparator/savedsearchcomparator-ee/build.gradle
@@ -8,7 +8,7 @@ configurations {
 //version = '1.0.0'
 version = project.ext.getServiceVersion("SavedsearchService-comparator")
 group = 'emaas/applications/savedsearch-framework'
-deployname=artifactPrefix+'savedsearch-comparator'
+deployname=artifactPrefix+'savedsearchservice-comparator'
 def artifactId = 'savedsearchcomparator' 
 def groupId = group 
 def versionNumber = version
@@ -17,7 +17,7 @@ ear
 {
 	libDirName 'lib'
 	appDirName 'EarContent'
-	baseName = artifactPrefix+'savedsearch-comparator'
+	baseName = artifactPrefix+'savedsearchservice-comparator'
 	from('ear/META-INF')
 	{ 
 		include 'ear/META-INF/*.xml'
