--- a/savedsearch-comparator/savedsearchcomparator-ee/build.gradle
+++ b/savedsearch-comparator/savedsearchcomparator-ee/build.gradle
@@ -8,7 +8,7 @@ configurations {
 //version = '1.0.0'
 version = project.ext.getServiceVersion("SavedsearchService-comparator")
 group = 'emaas/applications/savedsearch-framework'
-deployname=artifactPrefix+'savedsearchservice-comparator'
+deployname=artifactPrefix+'savedsearch-comparator'
 def artifactId = 'savedsearchcomparator' 
 def groupId = group 
 def versionNumber = version
@@ -17,7 +17,7 @@ ear
 {
 	libDirName 'lib'
 	appDirName 'EarContent'
-	baseName = artifactPrefix+'savedsearchservice-comparator'
+	baseName = artifactPrefix+'savedsearch-comparator'
 	from('ear/META-INF')
 	{ 
 		include 'ear/META-INF/*.xml'
@@ -113,7 +113,7 @@ task appServerDeploy{
 
 		ant.wldeploy(action:'deploy',  
 		source:     ear.archivePath, 
-		name:       "SavedsearchService-Comparator-6",
+		name:       "SavedsearchService-comparator-6",
 		targets:	wlsserver_target,
 		adminurl:   t3URL,  
 		user:       adminUser, 
@@ -133,7 +133,7 @@ task appServerUndeploy{
 		println "Undeploying ${appName_ui}-${version} from ${t3URL}" 
 
 		ant.wldeploy(action:'undeploy',  
-		name:       "SavedsearchService-Comparator-6",
+		name:       "SavedsearchService-comparator-6",
 		adminurl:   t3URL,  
 		user:       adminUser, 
 		password:   adminUserPassword, 
