--- a/build.gradle
+++ b/build.gradle
@@ -317,3 +317,12 @@ task cleanUpDB4LocalLRG<<{
 	println "\t================================"
     }
 }
+
+allprojects {
+  /* The name of your repository, either hardcoded or from a property */
+  project.group = "${project.baseGroup}.emcpssf"
+  if (project != rootProject) {
+    project.group += project.path.replaceAll(~/:/, '.')
+  }
+}
+
