--- a/savedsearch-comparator/savedsearchcomparator-web/build.gradle
+++ b/savedsearch-comparator/savedsearchcomparator-web/build.gradle
@@ -105,7 +105,7 @@ test {
 
 dependencies {
 	compile configurations.restAssured 
-	providedCompile project(':savedsearch-comparator:savedsearchcomparator-webutils')  { transitive = false }
+	providedCompile (project(':savedsearch-comparator:savedsearchcomparator-webutils')) // { transitive = false }
 	providedCompile(group: 'javax.servlet', name:'servlet-api', version:'2.5') { transitive = false }
 	providedCompile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17') { transitive = false }
 	providedCompile(group: 'com.sun.jersey', name: 'jersey-core', version: '1.17.1') {transitive=false}
