--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,13 @@ remote_restdoc_dir=restdoc
 publishGroup=com.oracle.emaas.emcpssf.test
 
 #==============================================================================
+# DevInfraPlugin
+devinfraVersion=1.0.+
+# TestInfraPlugin
+testinfraVersion=1.1.+
+#==============================================================================
+
+#==============================================================================
 # standard section for rootProject gradle.properties
 #
 # doc for overridable CBF repository properties artifactory_* and maven_*:
@@ -27,3 +34,4 @@ systemProp.https.nonProxyHosts=*.oracle.com|*.oraclecorp.com|localhost
 ## systemProp.https.proxyHost=www-proxy.us.oracle.com
 ## systemProp.https.proxyPort=80
 #==============================================================================
+
