--- a/savedsearch-comparator/savedsearchcomparator-web/test.gradle
+++ b/savedsearch-comparator/savedsearchcomparator-web/test.gradle
@@ -18,8 +18,8 @@ task integTestJar (type:Jar) {
 }
 dependencies {
 
-	testConfig project(':savedsearch-comparator:savedsearchcomparator-web')  { transitive = false }
-	testConfig project(':savedsearch-comparator:savedsearchcomparator-webutils')  { transitive = false }
+	testConfig (project(':savedsearch-comparator:savedsearchcomparator-web')) // { transitive = false }
+	testConfig (project(':savedsearch-comparator:savedsearchcomparator-webutils')) // { transitive = false }
 	testConfig(group: 'javax.servlet', name:'servlet-api', version:'2.5')  { transitive = false }
 	testConfig(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17'){ transitive = false }
 	testConfig(group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: '1.17.1'){ transitive = false }
