--- a/savedsearch-comparator/savedsearchcomparator-webutils/test.gradle
+++ b/savedsearch-comparator/savedsearchcomparator-webutils/test.gradle
@@ -12,7 +12,7 @@ task integTestJar (type:Jar) {
 }
 
 dependencies {
-	testConfig project(':savedsearch-comparator:savedsearchcomparator-webutils')  { transitive = false }
+	testConfig (project(':savedsearch-comparator:savedsearchcomparator-webutils')) // { transitive = false }
 	testConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){ transitive = false }
         testConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){ transitive = false }
 	testConfig(group: 'com.oracle.jdbc', name: 'ojdbc6', version: '12.1.0.1.0') { transitive = false }
