--- a/savedsearch-tools/test.gradle
+++ b/savedsearch-tools/test.gradle
@@ -16,7 +16,7 @@ task integTestJar (type:Jar) {
 }
 
 dependencies{
-	testConfig project(':savedsearch-tools'){transitive=false}
+	testConfig (project(':savedsearch-tools')) // {transitive=false}
         testConfig(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){ transitive = false }
         testConfig(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){ transitive = false }
         testConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){ transitive = false }
