--- a/savedsearch-zdt-test-sdk/build.gradle
+++ b/savedsearch-zdt-test-sdk/build.gradle
@@ -41,9 +41,9 @@ artifactoryPublish{
      publications('integTest')
 }
 dependencies {
-	compile project(':savedsearch-entities'){transitive = false}
-	compile project(':savedsearch-core'){transitive = false}
-	compile project(':savedsearch-web-utils'){transitive = false}
+	compile (project(':savedsearch-entities')) // {transitive = false}
+	compile (project(':savedsearch-core')) // {transitive = false}
+	compile (project(':savedsearch-web-utils')) // {transitive = false}
 	
 	//compile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){transitive = false}
 	compile(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0')
