--- a/savedsearch-zdt-test-sdk/test.gradle
+++ b/savedsearch-zdt-test-sdk/test.gradle
@@ -10,8 +10,8 @@ task integTestJar (type:Jar) {
     appendix = 'integ-tests'
 }
 dependencies {
-	testConfig project(':savedsearch-web'){ transitive = false } 
-	testConfig project(':savedsearch-entities'){ transitive = false }
+	testConfig (project(':savedsearch-web')) // { transitive = false } 
+	testConfig (project(':savedsearch-entities')) // { transitive = false }
 	testConfig(group: 'javax.servlet', name:'servlet-api', version:'2.5'){ transitive = false }
 	//testConfig(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){ transitive = false }
 	testConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){ transitive = false }
