--- a/savedsearch-comparator/savedsearchcomparator-web/testenv.properties
+++ b/savedsearch-comparator/savedsearchcomparator-web/testenv.properties
@@ -1,4 +1,4 @@
-#Sun, 27 Nov 2016 22:40:29 -0800
+#Wed, 03 May 2017 21:35:08 -0700
 
-hostname=den00ytq.us.oracle.com
+hostname=den02dtf.us.oracle.com
 port=7001
