EMCPSSF-434 fix part I

--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -104,5 +104,6 @@ dependencies {
 	compile getProjectArtifact('registry-client')
 	compile getProjectArtifact('registry-lookup-client')
 	compile getProjectArtifact('emaas-platform-tenant-sdk')
+	compile getProjectArtifact('dashboards-sdk')
 	testCompile getProjectArtifact('jmockit')
 }
